delete unassigned users

--- a/TestSelectRecords.Module/TestSelectRecords.Module.csproj
+++ b/TestSelectRecords.Module/TestSelectRecords.Module.csproj
@@ -36,4 +36,9 @@
     <PackageReference Include="Azure.Identity" Version="1.11.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.34.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="UnusableNodes1.xml">
+      <DependentUpon>Model.DesignedDiffs.xafml</DependentUpon>
+    </None>
+  </ItemGroup>
 </Project>
